--- a/frontend/web/gsl-web/src/components/footer/styles.css
+++ b/frontend/web/gsl-web/src/components/footer/styles.css
@@ -1,5 +1,6 @@
 footer {
-    background-color: lightgray;
+    background-color: #EFEFEF;
     text-align: right;
     padding-right: 50px;
+    color: #0a58ca;
 }
